Changed navbar color and text to UIC marketing style and also added the coming soon section to before contact us and link in navbar that references this container

--- a/css/agency.css
+++ b/css/agency.css
@@ -271,7 +271,7 @@ header.masthead .intro-text .intro-heading {
   height: 20px;
   margin-top: -12px;
   text-align: center;
-  color: white;
+  color: #00B5E2;
 }
 
 #portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
